--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Hotel_Celinnaya</title>
   </head>
   <body>
+    <!--Header   -->
+
     <nav class="header">
       <div id="mainLogo">
         <img src="SitePics/mainLogo.svg" alt="CelinnayaLogo" />
@@ -27,14 +29,16 @@
           <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
         >
         <i lang="en"
-          >The Republic of Kazakhstan<br />Baytursynov Street 95, Kostanay<br /><span class="emoji">&#128222;</span>+7
-          (707) 634 34 24<br />
-          <span class="emoji">&#128222;</span>+7 (7142) 54 43 66</i
+          >The Republic of Kazakhstan<br />Baytursynov Street 95, Kostanay<br /><a href="tel:+77076343424"
+            ><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+          ><br />
+          <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
         >
         <i lang="kz"
-          >Қазақстан Республикасы<br />Қостанай, Байтұрсынұлы к-сі, 95<br /><span class="emoji">&#128222;</span>+7 (707)
-          634 34 24<br />
-          <span class="emoji">&#128222;</span>+7 (7142) 54 43 66</i
+          >Қазақстан Республикасы<br />Қостанай, Байтұрсынұлы к-сі, 95<br /><a href="tel:+77076343424"
+            ><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+          ><br />
+          <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
         >
       </div>
       <div id="socials_Lang">
@@ -63,6 +67,9 @@
         </div>
       </div>
     </nav>
+
+    <!--Book Room element and navMenu-->
+
     <div id="bookRoomContainer">
       <i class="bookRoom" lang="ru">Забронировать номер</i>
       <i class="bookRoom" lang="en">Book your Room</i>
@@ -75,12 +82,12 @@
           <i lang="en">Main page</i>
           <i lang="kz">Главная</i>
         </div>
-        <div class="navMenu" id="suits">
+        <div class="navMenu" id="rooms">
           <i lang="ru">Номера</i>
           <i lang="en">Rooms</i>
           <i lang="kz">Бөлмелер</i>
         </div>
-        <div class="navMenu" id="conference">
+        <div class="navMenu" id="service">
           <i lang="ru">Услуги</i>
           <i lang="en">Services</i>
           <i lang="kz">Қызметтер</i>
@@ -97,31 +104,49 @@
         </div>
       </div>
     </nav>
+
+    <!--Main page starting here-->
+
     <article>
-      <div class="articleTitle">
-        <i lang="ru">Гостиничный комплекс "Целинный"</i>
-        <i lang="en">Hotel "Celinnaya"</i>
-        <i lang="kz">Селіндік қонақ үйі</i>
-      </div>
+      <h3 lang="ru">Гостиничный комплекс "Целинный"</h3>
+      <h3 lang="en">Hotel "Celinnaya"</h3>
+      <h3 lang="kz">Селіндік қонақ үйі</h3>
+      <p lang="ru">Добро пожаловать в гостиницу «Целинная» — ваш дом вдали от дома в самом сердце г. Костаная.</p>
+      <p lang="en">Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city.</p>
+      <p lang="ru">
+        Мы находимся в деловом и культурном центре города на пересечении улиц Байтурсынова и Пушкина, всего в 20 минутах
+        езды от аэропорта и в 10 минутах езды от железнодорожного вокзала, что делает нас идеальным местом как для тех,
+        кто останавливается в Костанае в деловых целях, так и для тех, кто приехал отдохнуть.
+      </p>
+      <p lang="en">
+        We are located in the business and cultural center of the city at the intersection of Baytursynov and Pushkin
+        streets, just 20 minutes' drive from the airport and 10 minutes' drive from the railway station, making us the
+        perfect place for both business and leisure travelers.
+      </p>
+      <p lang="ru">
+        Мы предлагаем более 130 уютных и комфортабельных номеров различных категорий, оборудованных всем необходимым для
+        вашего комфорта и удобства. Независимо от того, путешествуете ли Вы в одиночку, семьей или туристической
+        группой, в гостинице «Целинная» всегда найдется идеальный номер для Вас. Кроме того, мы предлагаем номера
+        эконом-класса для тех, кто хочет сэкономить на проживании.
+      </p>
+      <p lang="ru">
+        В нашей гостинице также доступен широкий спектр дополнительных услуг: бесплатный Wi-Fi, ресторан и кафетерий,
+        конференц-зал, охраняемая бесплатная парковка, прачечная, салон красоты, парикмахерская, стоматологический
+        кабинет.
+      </p>
+      <p lang="ru">
+        Наши сотрудники всегда готовы помочь вам и ответить на любые вопросы, связанные с бизнесом, туристическими
+        маршрутами или местами отдыха в Костанае. Мы принимаем оплату за проживание как наличными, так и безналичным
+        расчетом.
+      </p>
+      <p lang="ru">
+        Мы уверены, что ваше пребывание в гостинице «Целинная» станет приятным опытом и постоянно работаем над тем,
+        чтобы нашим посетителям было удобно и комфортно. Насладитесь домашней атмосферой и уютом в нашей гостинице!
+      </p>
+      <p lang="ru"></p>
+      <p lang="en">текст на english языке</p>
+      <p lang="kz">текст на kazakh языке</p>
       <div class="articleText">
-        <i lang="ru"
-          >Добро пожаловать в гостиницу «Целинная» — ваш дом вдали от дома в самом сердце г. Костаная. <br />
-          Мы находимся в деловом и культурном центре города на пересечении улиц Байтурсынова и Пушкина, всего в 20
-          минутах езды от аэропорта и в 10 минутах езды от железнодорожного вокзала, что делает нас идеальным местом как
-          для тех, кто останавливается в Костанае в деловых целях, так и для тех, кто приехал отдохнуть. <br />
-          Мы предлагаем более 130 уютных и комфортабельных номеров различных категорий, оборудованных всем необходимым
-          для вашего комфорта и удобства. Независимо от того, путешествуете ли Вы в одиночку, семьей или туристической
-          группой, в гостинице «Целинная» всегда найдется идеальный номер для Вас.
-          <br />В нашей гостинице также доступен спектр дополнительных услуг: ресторан и кафетерий, конференц-зал,
-          охраняемая бесплатная парковка, прачечная, салон красоты, парикмахерская, стоматологический кабинет.
-          <br />Наши сотрудники всегда готовы помочь вам и ответить на любые вопросы, связанные с бизнесом,
-          туристическими маршрутами или местами отдыха в Костанае. Мы принимаем оплату за проживание как наличными, так
-          и безналичным расчетом. Кроме того, мы предлагаем номера эконом-класса для тех, кто хочет сэкономить на
-          проживании. <br />
-          Мы уверены, что ваше пребывание в гостинице «Целинная» станет приятным и запоминающимся опытом и гарантируем,
-          что ваше пребывание в нашей гостинице будет не только комфортным, но и приятным. Насладитесь домашней
-          атмосферой и уютом в нашей гостинице.
-        </i>
         <i lang="en"
           >Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city. We are located in the
           business and cultural center of the city at the intersection of Baytursynov and Pushkin streets, just 20
@@ -148,43 +173,41 @@
           қорғалған тегін паркинг, прачечная, сауық салоны, жүзімдік орындары мен дәрігерлер бар.</i
         >
       </div>
-      <div class="advantages">
-        <ul>
-          <i lang="ru">Наши преимущества</i>
-          <i lang="en">Our advantages</i>
-          <i lang="kz">Біздің өнімдеріміз</i>
-          <li>
-            <i lang="ru">Индивидуальный подход</i>
-            <i lang="en">Induvidual approach</i>
-            <i lang="kz">Индивидуальный подход</i>
-          </li>
-          <li>
-            <i lang="ru">Приемлемые цены</i>
-            <i lang="en">Affordable Prices</i>
-            <i lang="kz">Қолжетімді бағалар</i>
-          </li>
-          <li>
-            <i lang="ru">Широкий ассортимент номеров</i>
-            <i lang="en">Wide variety of rooms</i>
-            <i lang="kz">Бөлмелердің кең таңдауы</i>
-          </li>
-          <li>
-            <i lang="ru">Внимательный и отзывчивый персонал</i>
-            <i lang="en">Attentive and helpful Staff</i>
-            <i lang="kz">Мұқият және көмекші персонал</i>
-          </li>
-          <li>
-            <i lang="ru">Ухоженные номера</i>
-            <i lang="en">Well-maintained Rooms</i>
-            <i lang="kz">Индивидуальный подход</i>
-          </li>
-          <li>
-            <i lang="ru">Расположение в центре города</i>
-            <i lang="en">Convenient Location in the City Center</i>
-            <i lang="kz">Индивидуальный подход</i>
-          </li>
-        </ul>
-      </div>
+      <h3 lang="ru">Наши преимущества</h3>
+      <h3 lang="en">Our Advantages</h3>
+      <h3 lang="kz">Біздің артықшылықтарымыз</h3>
+      <ul id="advantages">
+        <li>
+          <i lang="ru">Индивидуальный подход</i>
+          <i lang="en">Induvidual approach</i>
+          <i lang="kz">Индивидуальный подход</i>
+        </li>
+        <li>
+          <i lang="ru">Приемлемые цены</i>
+          <i lang="en">Affordable Prices</i>
+          <i lang="kz">Қолжетімді бағалар</i>
+        </li>
+        <li>
+          <i lang="ru">Широкий ассортимент номеров</i>
+          <i lang="en">Wide variety of rooms</i>
+          <i lang="kz">Бөлмелердің кең таңдауы</i>
+        </li>
+        <li>
+          <i lang="ru">Внимательный и отзывчивый персонал</i>
+          <i lang="en">Attentive and helpful Staff</i>
+          <i lang="kz">Мұқият және көмекші персонал</i>
+        </li>
+        <li>
+          <i lang="ru">Ухоженные номера</i>
+          <i lang="en">Well-maintained Rooms</i>
+          <i lang="kz">Индивидуальный подход</i>
+        </li>
+        <li>
+          <i lang="ru">Расположение в центре города</i>
+          <i lang="en">Convenient Location in the City Center</i>
+          <i lang="kz">Индивидуальный подход</i>
+        </li>
+      </ul>
     </article>
   </body>
 </html>
