--- a/service.html
+++ b/service.html
@@ -118,5 +118,8 @@
       </p>
       <p lang="en">Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city.</p>
     </article>
+    <article class="serviceArticle">
+      <h3 lang="ru">Ресторан</h3>
+    </article>
   </body>
 </html>
