--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
       </div>
       <div id="headerInfo">
         <i lang="ru"
-          >Республика Казахстан<br />г. Костанай, <span class="avoidWrap">ул. Батурсынова, 95</span><br /><a
-            href="tel:+77076343424"
-            ><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
-          ><br />
+          ><span class="mapLink"
+            >Республика Казахстан<br />г. Костанай, <span class="avoidWrap">ул. Батурсынова, 95</span></span
+          ><br /><a href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a><br />
           <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
         >
         <i lang="en"
@@ -117,8 +116,8 @@
       <h3 lang="en">Hotel "Celinnaya"</h3>
       <h3 lang="kz">Селіндік қонақ үйі</h3>
 
-      <div class="articlePhoto">
-        <picture class="pictureElement">
+      <div class="imageContainer">
+        <picture class=".articlePhoto">
           <source media="(min-width:1000px)" srcset="Main/Entrance1026.jpg" alt="Entrance1000px" />
           <source media="(min-width:600px)" srcset="Main/Entrance640.jpg" alt="Entrance600px" />
           <img src="Main/Entrance300.jpg" alt="Entrance" />
@@ -128,30 +127,36 @@
       <p lang="ru">Добро пожаловать в гостиницу «Целинная» — ваш дом вдали от дома в самом сердце г. Костаная.</p>
       <p lang="en">Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city.</p>
       <p lang="ru">
-        Мы находимся в деловом и культурном центре города на пересечении улиц Байтурсынова и Пушкина, всего в 20 минутах
-        езды от аэропорта и в 10 минутах езды от железнодорожного вокзала, что делает нас идеальным местом как для тех,
-        кто останавливается в Костанае в деловых целях, так и для тех, кто приехал отдохнуть.
+        <span class="linkedP about"
+          >Мы находимся в деловом и культурном центре города на пересечении улиц Байтурсынова и Пушкина</span
+        >, всего в 20 минутах езды от аэропорта и в 10 минутах езды от железнодорожного вокзала, что делает нас
+        идеальным местом как для тех, кто останавливается в Костанае в деловых целях, так и для тех, кто приехал
+        отдохнуть.
       </p>
       <p lang="en">
         We are located in the business and cultural center of the city at the intersection of Baytursynov and Pushkin
         streets, just 20 minutes' drive from the airport and 10 minutes' drive from the railway station, making us the
         perfect place for both business and leisure travelers.
       </p>
+      <div class="imageContainer">
+        <picture class=".articlePhoto">
+          <img src="Main/_060.jpg" alt="RoomExample" />
+        </picture>
+      </div>
       <p lang="ru">
-        Мы предлагаем более 130 уютных и комфортабельных номеров различных категорий, оборудованных всем необходимым для
-        вашего комфорта и удобства. Независимо от того, путешествуете ли Вы в одиночку, семьей или туристической
-        группой, в гостинице «Целинная» всегда найдется идеальный номер для Вас. Кроме того, мы предлагаем номера
-        эконом-класса для тех, кто хочет сэкономить на проживании.
+        Мы предлагаем <span class="linkedP rooms">более 130 уютных и комфортабельных номеров различных категорий</span>,
+        оборудованных всем необходимым для вашего комфорта и удобства. Неважно, путешествуете ли Вы в одиночку, с семьей
+        или в большой компании и каков Ваш бюджет, в гостинице «Целинная» всегда найдется идеальный номер для Вас.
       </p>
       <p lang="ru">
-        В нашей гостинице также доступен широкий спектр дополнительных услуг: бесплатный Wi-Fi, ресторан и кафетерий,
-        конференц-зал, охраняемая бесплатная парковка, прачечная, салон красоты, парикмахерская, стоматологический
-        кабинет.
+        В нашей гостинице также доступен <span class="linkedP service">широкий спектр дополнительных услуг:</span>
+        бесплатный Wi-Fi, ресторан и кафетерий, конференц-зал, охраняемая бесплатная парковка, прачечная, салон красоты,
+        парикмахерская, стоматологический кабинет.
       </p>
       <p lang="ru">
-        Наши сотрудники всегда готовы помочь вам и ответить на любые вопросы, связанные с бизнесом, туристическими
-        маршрутами или местами отдыха в Костанае. Мы принимаем оплату за проживание как наличными, так и безналичным
-        расчетом.
+        <span class="linkedP vacancies">Наши сотрудники</span> всегда готовы помочь вам и ответить на любые вопросы,
+        связанные с бизнесом, туристическими маршрутами или местами отдыха в Костанае. Мы принимаем оплату за проживание
+        как наличными, так и безналичным расчетом.
       </p>
       <p lang="ru">
         Мы уверены, что ваше пребывание в гостинице «Целинная» станет приятным опытом и постоянно работаем над тем,
