second Image on main page replaced

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </p>
         <div class="imageContainer">
           <picture class=".articlePhoto">
-            <img src="Main/_060.jpg" alt="RoomExample" />
+            <img src="Main/roomExample.jpg" alt="RoomExample" />
           </picture>
         </div>
         <p lang="ru">
